<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.LoginActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="256dp"
            android:src="@drawable/cover"
            android:layout_margin="32dp"/>
        <EditText
            android:id="@+id/et_login"
            android:hint="@string/login_hint"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="12dp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="14dp"
            android:background="@drawable/rounded_corners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:inputType="textPassword"
            android:id="@+id/et_pass"
            android:layout_marginBottom="9dp"
            android:hint="@string/password_hint"
            android:layout_marginHorizontal="16dp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="14dp"
            android:background="@drawable/rounded_corners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_reset_pass"
            android:textStyle="italic"
            android:contextClickable="true"
            android:layout_marginBottom="32dp"
            android:textColor="@color/primary_dark"
            android:text="@string/forgot_password"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/login_btn"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="14dp"
            android:backgroundTint="@color/primary"
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="60dp"/>
        <TextView
            android:id="@+id/tv_go_to_register"
            android:textColor="@color/text_color"
            android:text="@string/not_a_member"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>